Update donate layout

--- a/cmd/webserver/templates/donate.gohtml
+++ b/cmd/webserver/templates/donate.gohtml
@@ -27,93 +27,53 @@
 
         {{/* Perks */}}
         <div class="card mb-3">
-            <div class="card-body p-0">
+            <div class="card-body">
 
-                <div class="table-responsive">
-                    <table class="table table-hover table-striped table-datatable mb-0" data-ordering="false">
-                        <thead class="thead-light">
-                        <tr>
-                            <th scope="col">Patreon/GitHub Perks</th>
-                            <th scope="col">1$</th>
-                            <th scope="col">3$</th>
-                            <th scope="col">20$</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> No ads</td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Donator flair</td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Your name in the hall of fame</td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Quicker profile updates</td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Quick add friends</td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Access to more data</td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Automatic profile updates, for you and your primary group</td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Unlimited access to Game DB data</td>
-                            <td></td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Remove Game DB branding from chat bot</td>
-                            <td></td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> <a href="/api">API</a> access</td>
-                            <td></td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Webhooks & emails on changes</td>
-                            <td></td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        <tr>
-                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Influence the Game DB roadmap</td>
-                            <td></td>
-                            <td></td>
-                            <td><i class="fas fa-check text-success"></i></td>
-                        </tr>
-                        </tbody>
-                    </table>
+                <div class="card mb-3">
+                    <h5 class="card-header">
+                        Level 1
+                        <span class="float-right">$1 /m</span>
+                    </h5>
+                    <div class="card-body p-0">
+
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> No ads</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Donator flair</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Your name in the hall of fame</div>
+
+                    </div>
+                </div>
+
+                <div class="card mb-3">
+                    <h5 class="card-header">
+                        Level 2
+                        <span class="float-right">$3 /m</span>
+                    </h5>
+                    <div class="card-body p-0">
+
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> All Above</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Quicker profile updates</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Quick add friends</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Access to more data</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Automatic profile updates, for you and your primary group</div>
+
+                    </div>
+                </div>
+
+                <div class="card mb-3">
+                    <h5 class="card-header">
+                        Level 3
+                        <span class="float-right">$20 /m</span>
+                    </h5>
+                    <div class="card-body p-0">
+
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> All Above</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Unlimited access to Game DB data</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Remove Game DB branding from chat bot</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> <a href="/api">API</a> access</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Webhooks & emails on changes</div>
+                        <div class="m-2"><i class="fas fa-star text-warning"></i> Influence the Game DB roadmap</div>
+
+                    </div>
                 </div>
 
             </div>
