Add link to friends

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -236,6 +236,7 @@
                                         <th scope="col">Games</th>
                                         <th scope="col">Logged Off</th>
                                         <th scope="col">Friend Since</th>
+                                        <th scope="col"></th>
                                     </tr>
                                     </thead>
                                     <tbody>
