Rename chat bot

--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -202,10 +202,10 @@
 
                             <div class="dropdown-divider"></div>
 
+                            <a class="dropdown-item" href="/chat-bot">Discord Bot</a>
+                            <a class="dropdown-item" href="/queues">Queues</a>
                             <a class="dropdown-item" href="/api">API (Game DB)</a>
                             <a class="dropdown-item" href="/steam-api">API (Steam)</a>
-                            <a class="dropdown-item" href="/chat-bot">Chat Bot</a>
-                            <a class="dropdown-item" href="/queues">Queues</a>
 
                         </div>
                     </li>
