--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -5,10 +5,10 @@
 
         <div class="jumbotron">
             <a href="{{ .Link }}" target="_blank">
-                <img src="/assets/img/discord.png" class="float-right" alt="Add chat bot to your server" title="Add chat bot to your server">
+                <img src="/assets/img/discord.png" class="float-right" alt="Add Steam Discord Bot to your server" title="Add Steam Discord Bot to your server">
             </a>
-            <h1><i class="fas fa-robot"></i> Steam Chat Bot</h1>
-            <p class="lead"><a href="{{ .Link }}" target="_blank">Add the Steam Chat Bot to your Discord server</a>.</p>
+            <h1><i class="fas fa-robot"></i> Steam Discord Bot</h1>
+            <p class="lead"><a href="{{ .Link }}" target="_blank">Add the Steam Discord Bot to your Discord server</a>.</p>
             <small>Used on {{ .Guilds }}+ servers so far.</small>
         </div>
 
