Rename donate button

--- a/cmd/webserver/templates/donate.gohtml
+++ b/cmd/webserver/templates/donate.gohtml
@@ -17,7 +17,7 @@
             </a>
 
             <a class="btn" role="button" href="https://paypal.me/jimeagle/15" target="_blank" style="background-color: #003087; color: #fff">
-                <i class="fab fa-cc-paypal"></i> PayPal
+                <i class="fab fa-cc-paypal"></i> PayPal One Off
             </a>
 
             <p class="mb-0 mt-2">GitHub is currently matching any donation made!</p>
