Add Achievement Stats link

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -128,7 +128,7 @@
                                     </div>
                                 </div>
 
-                                <div class="card mb-4 mb-lg-0">
+                                <div class="card mb-4">
                                     <div class="card-header">Bans</div>
                                     <div class="card-body">
 
@@ -166,6 +166,15 @@
                                                 </tr>
                                             </table>
                                         </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="card mb-4 mb-lg-0">
+                                    <div class="card-header">Links</div>
+                                    <div class="card-body pb-2">
+
+                                        <h6><a href="https://www.achievementstats.com/index.php?action=profile&playerId={{ .Player.ID }}" target="_blank">View profile on Achievement Stats</a></h6>
 
                                     </div>
                                 </div>
