--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -209,6 +209,21 @@
                                             </tr>
                                         {{ end }}
 
+                                        <tr>
+                                            <th scope="row">Links</th>
+                                            <td>
+                                                {{ if ne .App.TwitchURL "" }}
+                                                    <h6><a href="https://twitch.tv/directory/game/{{ pathEscape .App.TwitchURL }}" target="_blank">View app on Twitch</a></h6>
+                                                {{ end }}
+
+                                                {{ if ne .App.GetSteamPricesURL "" }}
+                                                    <h6><a href="https://steamprices.com/{{ .App.GetSteamPricesURL }}/{{ .App.ID }}/{{ slug .App.GetName }}" target="_blank">View app on Steam Prices</a></h6>
+                                                {{ end }}
+
+                                                <h6><a href="https://www.achievementstats.com/index.php?action=games&gameId={{ .App.ID }}" target="_blank">View app on Achievement Stats</a></h6>
+                                            </td>
+                                        </tr>
+
                                         {{ if ne .App.GetMicroTrailer "" }}
                                             <tr>
                                                 <th scope="row">Micro Trailer</th>
@@ -259,39 +274,6 @@
                                                     {{ range $key, $value := .Categories }}
                                                         <a class="badge badge-success" href="/apps?categories={{ .ID }}">{{ .GetName }}</a>
                                                     {{ end }}
-                                                </td>
-                                            </tr>
-                                        {{ end }}
-
-                                    </table>
-                                </div>
-
-                            </div>
-                            <div class="col-12">
-
-                                <div class="table-responsive">
-                                    <table class="table mb-0">
-
-                                        {{ if ne .App.TwitchURL "" }}
-                                            <tr>
-                                                <th scope="row" style="width: 130px;">Twitch</th>
-                                                <td class="img">
-                                                    <img src="https://assets.help.twitch.tv/Glitch_Purple_RGB.png" alt="Twitch">
-                                                    <a href="https://twitch.tv/directory/game/{{ pathEscape .App.TwitchURL }}" target="_blank">
-                                                        twitch.tv/directory/game/{{ .App.TwitchURL }}
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                        {{ end }}
-
-                                        {{ if ne .App.GetSteamPricesURL "" }}
-                                            <tr>
-                                                <th scope="row" style="width: 130px;">Steam Prices</th>
-                                                <td class="img">
-                                                    <img src="https://pbs.twimg.com/profile_images/598791990084575232/KonQ1bk8_400x400.png" alt="Steam Prices">
-                                                    <a href="https://steamprices.com/{{ .App.GetSteamPricesURL }}/{{ .App.ID }}/{{ slug .App.GetName }}" target="_blank">
-                                                        steamprices.com/{{ .App.GetSteamPricesURL }}/{{ .App.ID }}/{{ slug .App.GetName }}
-                                                    </a>
                                                 </td>
                                             </tr>
                                         {{ end }}
