Add billing type to packages

--- a/cmd/webserver/templates/packages.gohtml
+++ b/cmd/webserver/templates/packages.gohtml
@@ -87,6 +87,7 @@
                             <th scope="col">Price</th>
                             <th scope="col">Discount</th>
                             <th scope="col">Apps</th>
+                            <th scope="col">Billing Type</th>
                             <th scope="col">Updated At</th>
                             <th scope="col"></th>
                         </tr>
