Update info panels

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -405,8 +405,8 @@ div#loading {
 // Info panels
 div.jumbotron.bottom {
 
-    @extend .mt-3;
     @extend .p-3;
+    @extend .mb-0;
 
     display: table;
     width: 100%;
