--- a/cmd/webserver/templates/bundles.gohtml
+++ b/cmd/webserver/templates/bundles.gohtml
@@ -6,6 +6,7 @@
         <div class="jumbotron">
             <h1><i class="fas fa-cubes"></i> Bundles</h1>
             <p class="lead">{{ .Description }}</p>
+            <small>Bundles are a special discount on a set of products. If you already own some of the products contained in the bundle, purchasing the bundle will allow you to "complete the set", paying only for the products you don't already own while still receiving the full bundle discount on each of those products.</small>
         </div>
 
         {{ template "_flashes" . }}
@@ -33,11 +34,6 @@
                 </div>
 
             </div>
-        </div>
-
-        <div class="jumbotron bottom">
-            <h1><i class="fas fa-info"></i></h1>
-            <div>Bundles are a special discount on a set of products. If you already own some of the products contained in the bundle, purchasing the bundle will allow you to "complete the set", paying only for the products you don't already own while still receiving the full bundle discount on each of those products.</div>
         </div>
 
     </div>
