--- a/cmd/webserver/templates/upcoming.gohtml
+++ b/cmd/webserver/templates/upcoming.gohtml
@@ -23,7 +23,6 @@
                 </div>
                 <div class="col-12">
                     <p class="lead">The {{ comma64 .Apps }} apps with a release date in the future.</p>
-                    <small>We are only able to show apps that have their release date in a format we can read, so there may be some missing.</small>
                 </div>
 
             </div>
@@ -53,12 +52,12 @@
                     </table>
                 </div>
 
-            </div>
-        </div>
+                <div class="jumbotron bottom mt-3">
+                    <h1><i class="fas fa-info"></i></h1>
+                    <div>We are only able to show apps that have their release date in a format we can read, so there may be some missing.</div>
+                </div>
 
-        <div class="jumbotron bottom">
-            <h1><i class="fas fa-info"></i></h1>
-            <div>We are only able to show apps that have their release date in a format we can read, so there may be some missing.</div>
+            </div>
         </div>
 
     </div>
