--- a/cmd/webserver/templates/news.gohtml
+++ b/cmd/webserver/templates/news.gohtml
@@ -87,12 +87,12 @@
 
                 </div>
 
-            </div>
-        </div>
+                <div class="jumbotron bottom mt-3">
+                    <h1><i class="fas fa-info"></i></h1>
+                    <div>News articles are added when the app is updated, either on Steam or on Game DB.</div>
+                </div>
 
-        <div class="jumbotron bottom">
-            <h1><i class="fas fa-info"></i></h1>
-            <div>News articles are added when the app is updated, either on Steam or on Game DB.</div>
+            </div>
         </div>
 
     </div>
