--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -382,7 +382,7 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mb-0">
+                        <div class="jumbotron bottom mt-3">
                             <h1><i class="fas fa-info"></i></h1>
                             <div>Groups that we don't know about might take longer to show up.</div>
                         </div>
@@ -520,16 +520,19 @@
                                 </table>
                             </div>
 
+                            <div class="jumbotron bottom mt-3">
+                                <h1><i class="fas fa-info"></i></h1>
+                                <div>All price stats are based on current prices.</div>
+                            </div>
+
                         {{ else }}
 
-                            This player either has no games or has them hidden to the public. Go <a target="_blank" href="https://steamcommunity.com/my/edit/settings">here</a> to change your privacy settings.
+                            <div class="jumbotron bottom">
+                                <h1><i class="fas fa-info"></i></h1>
+                                <div>This player either has no games or has them hidden to the public. Go <a target="_blank" href="https://steamcommunity.com/my/edit/settings">here</a> to change your privacy settings.</div>
+                            </div>
 
                         {{ end }}
-
-                        <div class="jumbotron bottom mb-0">
-                            <h1><i class="fas fa-info"></i></h1>
-                            <div>All price stats are based on current prices.</div>
-                        </div>
 
                     </div>
 
@@ -552,7 +555,7 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mb-0">
+                        <div class="jumbotron bottom mt-3">
                             <h1><i class="fas fa-info"></i></h1>
                             <div>
                                 {{/*Visit the <a href="/apps#wishlists">apps</a> page to see what apps are the most wished for.<br/>*/}}
