--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -101,13 +101,13 @@
                     </table>
                 </div>
 
-            </div>
-        </div>
+                <div class="jumbotron bottom mt-3">
+                    <h1><i class="fas fa-info"></i></h1>
+                    <div>Player info is updated when they the player is looked at or if manually updated (limits apply).
+                        <br>Ranks are updated at midnight UTC. <span data-livestamp="{{ .Date }}"></span>.
+                    </div>
+                </div>
 
-        <div class="jumbotron bottom">
-            <h1><i class="fas fa-info"></i></h1>
-            <div>Player info is updated when they the player is looked at or if manually updated (limits apply).
-                <br>Ranks are updated at midnight UTC. <span data-livestamp="{{ .Date }}"></span>.
             </div>
         </div>
 
