--- a/cmd/webserver/templates/sales.gohtml
+++ b/cmd/webserver/templates/sales.gohtml
@@ -162,12 +162,12 @@
                     </table>
                 </div>
 
-            </div>
-        </div>
+                <div class="jumbotron bottom mt-3">
+                    <h1><i class="fas fa-info"></i></h1>
+                    <div>* Finish time is estimate</div>
+                </div>
 
-        <div class="jumbotron bottom">
-            <h1><i class="fas fa-info"></i></h1>
-            <div>* Finish time is estimate</div>
+            </div>
         </div>
 
     </div>
