--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -97,12 +97,12 @@
 
                 </div>
 
-            </div>
-        </div>
+                <div class="jumbotron bottom mt-3">
+                    <h1><i class="fas fa-info"></i></h1>
+                    <div>Wishlist player counts are updated when a player is updated.</div>
+                </div>
 
-        <div class="jumbotron bottom">
-            <h1><i class="fas fa-info"></i></h1>
-            <div>Wishlist player counts are updated when a player is updated.</div>
+            </div>
         </div>
 
     </div>
