Hide oauth logins for now

--- a/cmd/webserver/templates/login.gohtml
+++ b/cmd/webserver/templates/login.gohtml
@@ -44,14 +44,16 @@
 
                             </div>
 
-                            <div class="col-12 col-md-4 col-lg-6" id="oauth-buttons">
-                                <p class="mb-0">Or login with:</p>
-                                <a href="/login/oauth/steam" data-toggle="tooltip" data-placement="bottom" title="Steam"><i class="fab fa-steam"></i></a>
-                                <a href="/login/oauth/patreon" data-toggle="tooltip" data-placement="bottom" title="Patreon"><i class="fab fa-patreon"></i></a>
-                                <a href="/login/oauth/google" data-toggle="tooltip" data-placement="bottom" title="Google"><i class="fab fa-google"></i></a>
-                                <a href="/login/oauth/discord" data-toggle="tooltip" data-placement="bottom" title="Discord"><i class="fab fa-discord"></i></a>
-                                <a href="/login/oauth/github" data-toggle="tooltip" data-placement="bottom" title="GitHub"><i class="fab fa-github"></i></a>
-                            </div>
+                            {{ if .IsAdmin }}
+                                <div class="col-12 col-md-4 col-lg-6" id="oauth-buttons">
+                                    <p class="mb-0">Or login with:</p>
+                                    <a href="/login/oauth/steam" data-toggle="tooltip" data-placement="bottom" title="Steam"><i class="fab fa-steam"></i></a>
+                                    <a href="/login/oauth/patreon" data-toggle="tooltip" data-placement="bottom" title="Patreon"><i class="fab fa-patreon"></i></a>
+                                    <a href="/login/oauth/google" data-toggle="tooltip" data-placement="bottom" title="Google"><i class="fab fa-google"></i></a>
+                                    <a href="/login/oauth/discord" data-toggle="tooltip" data-placement="bottom" title="Discord"><i class="fab fa-discord"></i></a>
+                                    <a href="/login/oauth/github" data-toggle="tooltip" data-placement="bottom" title="GitHub"><i class="fab fa-github"></i></a>
+                                </div>
+                            {{ end }}
                         </div>
 
                     </div>
