Fix app chart heights

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -28,7 +28,11 @@
     #players {
 
         #players-chart {
-            height: 250px;
+            height: 300px;
+        }
+
+        #group-chart {
+            height: 300px;
         }
     }
 
