--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -121,10 +121,10 @@
 
                     <li class="nav-item dropdown {{if .IsAppsPage }}active{{end}}">
                         <a class="nav-link dropdown-toggle d-lg-none" href="#" data-toggle="dropdown">Games</a>
-                        <a class="nav-link dropdown-toggle d-none d-lg-block" href="/apps?types=game" data-toggle="dropdown">Games</a>
+                        <a class="nav-link dropdown-toggle d-none d-lg-block" href="/apps" data-toggle="dropdown">Games</a>
                         <div class="dropdown-menu">
 
-                            <a class="dropdown-item" href="/apps">All Apps</a>
+                            <a class="dropdown-item" href="/apps">Games</a>
                             <a class="dropdown-item" href="/upcoming">Upcoming</a>
                             <a class="dropdown-item" href="/new-releases">New Releases</a>
                             {{/*<a class="dropdown-item" href="/apps/trending">Trending</a>*/}}
