--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                <h5 class="">Players Online ({{ round64 .OnlinePlayersCount }} in game)</h5>
+                <h5 class="">Players Online ({{ round64 .SteamPlayersOnline }}, {{ round64 .SteamPlayersInGame }} in game)</h5>
                 <div class="chart mb-4" id="client-players">
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
